Added lease extension to java sdk and fixed tests